test/error/require3.luau
require "./dir1/badreturn3"
